# GameOfLife

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  GameOfLifeFactory.hpp  GameOfLifeService.hpp  InputOption.hpp  TheGame.hpp  UserInterface.hpp  game.cpp  game.hpp  game_of_life_factory.cpp  game_of_life_factory.hpp  main.cpp
app/user_interface/: StdUserInterface.hpp  UserInterface.hpp  input_option.hpp  std_user_interface.cpp  std_user_interface.hpp  user_interface.hpp
files/: 101.txt  blinker_ship.txt  popover.txt  pulsar.txt  readme.txt  snail.txt  superstring.txt
src/: CMakeLists.txt
src/gof_lib/: Board.hpp  BoardMemento.cpp  BoardMemento.hpp  CMakeLists.txt  Cell.hpp  GameOfLife.cpp  GameOfLife.hpp  GameOfLifeExporter.hpp  GameOfLifeLoader.hpp  GameOfLifeService.hpp  PlayingBoard.cpp  PlayingBoardMemento.hpp  board_memento.cpp  board_memento.hpp  game_of_life.cpp  game_of_life.hpp  performance_measurer.hpp
src/gof_lib/core/: Board.cpp  Board.hpp  Cell.hpp  board.cpp  board.hpp  cell.hpp
src/gof_lib/exporter/: GameOfLifeFileExporter.cpp  GameOfLifeFileExporter.hpp  GameOfLifePngExporter.cpp  GameOfLifePngExporter.hpp  game_of_life_file_exporter.cpp  game_of_life_file_exporter.hpp  game_of_life_png_exporter.cpp  game_of_life_png_exporter.hpp
src/gof_lib/loader/: GameOfLifeFromFileLoader.cpp  GameOfLifeFromFileLoader.hpp  GameOfLifeLoader.hpp  RandomValuesGameOfLifeLoader.cpp  RandomValuesGameOfLifeLoader.hpp  game_of_life_from_file_loader.cpp  game_of_life_from_file_loader.hpp  game_of_life_loader.hpp  random_values_game_of_life_loader.cpp  random_values_game_of_life_loader.hpp
tests/: BoardTest.cpp  CMakeLists.txt  GameOfLifeTest.cpp  board_test.cpp  game_of_life_test.cpp  main.cpp
